<?xml version="1.0" encoding="utf-8"?>
<!--
  strings.xml
  Mobile Messaging SDK

  Copyright (c) 2016-2025 Infobip Limited
  Licensed under the Apache License, Version 2.0
-->
<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="albanian">Shqip</string>
    <string name="arabic">العربية</string>
    <string name="bosnian">босански</string>
    <string name="croatian">Hrvatski</string>
    <string name="danish">Dansk</string>
    <string name="english">English</string>
    <string name="french">Français</string>
    <string name="german">Deutsch</string>
    <string name="greek">Ελληνικά</string>
    <string name="hungarian">Magyar</string>
    <string name="italian">Italiano</string>
    <string name="japanese">日本語</string>
    <string name="korean">한국어</string>
    <string name="latvian">Latviešu</string>
    <string name="lithuanian">Lietuvių</string>
    <string name="polish">Polski</string>
    <string name="portuguese">Português</string>
    <string name="romanian">Românește</string>
    <string name="russian">Русский</string>
    <string name="serbian">Srpski</string>
    <string name="slovenian">Slovenščina</string>
    <string name="spanish">Español</string>
    <string name="swedish">Svenska</string>
    <string name="thai">Thai</string>
    <string name="turkish">Türkçe</string>
    <string name="ukrainian">украї́нська</string>
    <string name="chinese_traditional">繁體中文</string>
    <string name="chinese_simplified">简体中文</string>

    <string name="push_registration_id">Push registration ID</string>
    <string name="livechat_registration_id">Livechat registration ID</string>
    <string name="customer_name">Customer name</string>
    <string name="subject_type">Subject type</string>
    <string-array name="subject_types">
        <item>E-mail</item>
        <item>Phone number</item>
        <item>External person ID</item>
    </string-array>
    <string name="subject">Subject</string>
    <string name="authenticate">Authenticate</string>
    <string name="mm_open_chat_activity">Open chat activity</string>
    <string name="mm_open_chat_fragment">Open chat fragment with:</string>
    <string name="mm_toolbar">Toolbar</string>
    <string name="mm_input">Input</string>
    <string name="mm_show_chat_fragment">Show chat fragment</string>
    <string name="mm_open_chat_view">Open chat view</string>
    <string name="mm_personalize">Personalize</string>
    <string name="mm_depersonalize">Depersonalize</string>
    <string name="enable_calls">Enable calls</string>
    <string name="disable_calls">Disable calls</string>
    <string name="open_widget_api">Livechat Widget API</string>
    <string name="runtime_customization">Runtime customization</string>
    <string name="dark_mode_dark">Dark</string>
    <string name="dark_mode_light">Light</string>
    <string name="dark_mode_auto">Auto</string>
    <string name="copied_to_clipboard">copied to clipboard</string>
    <string name="language_changed">Language changed to %1$s</string>
    <string name="custom_button_checked">Custom button checked</string>
    <string name="custom_button_enabled">Custom button enabled</string>
    <string name="chat_availability">Chat available: %1$b</string>
    <string name="message_type">Message type</string>
    <string-array name="message_types">
        <item>Basic text</item>
        <item>Draft</item>
        <item>Attachment</item>
        <item>Custom data</item>
        <item>Basic text with Attachment</item>
    </string-array>
    <string name="thread_id">Thread ID</string>
</resources>
