<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pushRegIdInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/lcRegIdInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:hint="@string/push_registration_id">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pushRegIdEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:textIsSelectable="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lcRegIdInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/pushRegIdInputLayout"
                    app:layout_constraintBottom_toTopOf="@+id/nameIdInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:visibility="visible"
                    android:visibility="gone"
                    android:hint="@string/livechat_registration_id">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lcRegIdEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:textIsSelectable="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameIdInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/subjectTypeInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pushRegIdInputLayout"
                    android:hint="@string/customer_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/subjectTypeInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/subjectInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nameIdInputLayout"
                    android:hint="@string/subject_type">

                    <AutoCompleteTextView
                        android:id="@+id/subjectTypeAutocompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/subjectInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/subjectTypeInputLayout"
                    android:hint="@string/subject">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/subjectEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/authenticate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/authenticate"
                    app:layout_constraintBottom_toTopOf="@+id/customization"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/subjectInputLayout"
                    app:layout_constraintVertical_chainStyle="packed" />

                <Button
                    android:id="@+id/customization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/runtime_customization"
                    app:layout_constraintBottom_toTopOf="@id/openChatActivity"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/authenticate" />

                <Button
                    android:id="@+id/openChatActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mm_open_chat_activity"
                    app:layout_constraintBottom_toTopOf="@+id/openChatFragment"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/customization" />

                <Button
                    android:id="@+id/openChatFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mm_open_chat_fragment"
                    app:layout_constraintBottom_toTopOf="@+id/openChatView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/openChatActivity" />

                <Button
                    android:id="@+id/openChatView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mm_open_chat_view"
                    app:layout_constraintBottom_toTopOf="@+id/personalize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/openChatFragment" />

                <Button
                    android:id="@+id/personalize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/mm_personalize"
                    app:layout_constraintBottom_toTopOf="@+id/enableCalls"
                    app:layout_constraintEnd_toStartOf="@id/depersonalize"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/openChatView" />

                <Button
                    android:id="@+id/depersonalize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mm_depersonalize"
                    app:layout_constraintBottom_toBottomOf="@id/personalize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/personalize"
                    app:layout_constraintTop_toTopOf="@id/personalize" />

                <Button
                    android:id="@+id/enableCalls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/enable_calls"
                    app:layout_constraintBottom_toTopOf="@id/darkModeToggle"
                    app:layout_constraintEnd_toStartOf="@id/disableCalls"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/personalize"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/disableCalls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disable_calls"
                    app:layout_constraintBottom_toBottomOf="@id/enableCalls"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/enableCalls"
                    app:layout_constraintTop_toTopOf="@id/enableCalls"
                    android:visibility="gone"/>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/darkModeToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/customButtonChecked"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/disableCalls"
                    app:singleSelection="true">

                    <Button
                        android:id="@+id/dark"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dark_mode_dark" />

                    <Button
                        android:id="@+id/light"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dark_mode_light" />

                    <Button
                        android:id="@+id/auto"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dark_mode_auto" />
                </com.google.android.material.button.MaterialButtonToggleGroup>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/customButtonChecked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:text="@string/custom_button_checked"
                    app:layout_constraintBottom_toTopOf="@id/customButtonEnabled"
                    app:layout_constraintEnd_toEndOf="@id/darkModeToggle"
                    app:layout_constraintStart_toStartOf="@id/darkModeToggle"
                    app:layout_constraintTop_toBottomOf="@id/darkModeToggle"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/customButtonEnabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:checked="true"
                    android:text="@string/custom_button_enabled"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/darkModeToggle"
                    app:layout_constraintStart_toStartOf="@id/darkModeToggle"
                    app:layout_constraintTop_toBottomOf="@id/customButtonChecked"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>